@@ -1,3 +1,9 @@
+2005-07-21  Albert Chu  <chu11@llnl.gov>
+
+	* Fix various metric controller bugs.
+
+	* Complete cerebro-admin.
+	
 2005-07-20  Albert Chu  <chu11@llnl.gov>
 
 	* Added metric_util lib to clean up code and fix corner cases.
